# rem-cli

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
docs/plan/: PLAN.md  integrationtest.md
docs/reviews/: ai-review-result_bug-file-vanish_20260304.md  ai-review-result_issue-3_20260221.md  codereview_PR11_20260611.md  codereview_PR18_20260615.md  codereview_PR19_20260616.md
mobile/: install-scriptable.js  rem-board.js  rem-board.test.mjs
native/: Info.plist  macos_speech.m
scripts/: macos-cargo-runner.sh
src/: app.rs  config.rs  lib.rs  main.rs  render.rs  task.rs  voice.rs
tests/: integration_test.rs
