[package]
name = "rem-cli"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "rem"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
